--- a/docker-compose-cookie.yml
+++ b/docker-compose-cookie.yml
@@ -16,7 +16,7 @@ services:
       - ./cookie.json:/usr/src/app/cookie.json
       - ./db.json:/usr/src/app/db.json
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:3000/"]
+      test: ["CMD", "wget", "-qO-", "http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
